--- a/Web/package.json
+++ b/Web/package.json
@@ -106,6 +106,7 @@
     "react-rangeslider": "^1.0.9",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0",
+    "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.0",
     "react-s-alert": "1.1.3",
     "react-scrollbar": "^0.4.1",
