linked to real backend

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -23,6 +23,7 @@
     <add key="mongo.database" value="phillipjbuttrose" />
     <add key="mongo.user" value="pjb" />
     <add key="mongo.password" value="pjb" />
+    <add key="Access-Control-Allow-Origin" value="http://localhost:3000"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
