--- a/Web/src/static/appConfig.json
+++ b/Web/src/static/appConfig.json
@@ -1,29 +1,8 @@
 ﻿{
-    "ProjectSetting": "OmniFlow",
+    "ProjectSetting": "Guitars",
     "clientAppSettings": {
       "build": "0.0.0.0",
-      "apiUrl": "http://localhost:5259/api/",
-      "trackMetrics": false,
-      "uploadDirectory": "/uploads/",
-      "uploadChunkSize": 65536,
-      "accessRoleName": "none",
-      "refreshInterval": 1,
-      "colours": [
-        "orange",
-        "blue",
-        "yellow",
-        "green",
-        "red",
-        "violet",
-        "brown",
-        "olive",
-        "crimson",
-        "magenta",
-        "cyan",
-        "indigo",
-        "sienna",
-        "pink",
-        "teal"
-      ]
+      "apiUrl": "http://localhost:61154/api/",
+      "assetUrl": "http://localhost:61154/"
     }
 }
