--- a/Web/package.json
+++ b/Web/package.json
@@ -95,6 +95,7 @@
     "react-bootstrap-select": "^0.14.0",
     "react-bootstrap-validation": "0.1.11",
     "react-burger-menu": "^1.5.7",
+    "react-center": "^1.1.1",
     "react-datepicker": "0.27.0",
     "react-dd-menu": "^1.0.7",
     "react-dimensions": "^1.3.0",
