--- a/Web/package.json
+++ b/Web/package.json
@@ -99,6 +99,7 @@
     "react-datepicker": "0.27.0",
     "react-dd-menu": "^1.0.7",
     "react-dimensions": "^1.3.0",
+    "react-document-title": "^2.0.2",
     "react-dom": "^0.14.0",
     "react-dropdown": "1.0.4",
     "react-loader-advanced": "^1.1.2",
