--- a/Web/package.json
+++ b/Web/package.json
@@ -75,7 +75,7 @@
     "fetch-mock": "^5.6.2",
     "fixed-data-table": "0.6.0",
     "fs-extra": "^0.26.3",
-    "history": "^2.0.0",
+    "history": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.0.0-alpha.3",
     "koa-connect-history-api-fallback": "^0.3.0",
@@ -89,11 +89,7 @@
     "react": "^0.14.0",
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
-    "react-bootstrap": "0.28.3",
-    "react-bootstrap-daterangepicker": "^3.2.2",
-    "react-bootstrap-multiselect": "^2.3.0",
-    "react-bootstrap-select": "^0.14.0",
-    "react-bootstrap-validation": "0.1.11",
+    "react-bootstrap": "^0.30.7",
     "react-burger-menu": "^1.5.7",
     "react-center": "^1.1.1",
     "react-datepicker": "0.27.0",
@@ -107,9 +103,9 @@
     "react-pdf-js": "^1.0.24",
     "react-rangeslider": "^1.0.9",
     "react-redux": "^4.0.0",
-    "react-router": "^2.0.0",
+    "react-router": "^3.0.1",
     "react-router-bootstrap": "^0.23.1",
-    "react-router-redux": "^4.0.0",
+    "react-router-redux": "^4.0.7",
     "react-s-alert": "1.1.3",
     "react-scrollbar": "^0.4.1",
     "react-select": "^1.0.0-rc.2",
