--- a/Web/package.json
+++ b/Web/package.json
@@ -99,6 +99,7 @@
     "react-dom": "^0.14.0",
     "react-dropdown": "1.0.4",
     "react-loader-advanced": "^1.1.2",
+    "react-masonry-component": "^5.0.3",
     "react-measure": "^0.5.0",
     "react-pdf-js": "^1.0.24",
     "react-rangeslider": "^1.0.9",
