font awesome and contacts

--- a/Web/package.json
+++ b/Web/package.json
@@ -74,6 +74,8 @@
     "es6-symbol": "3.0.2",
     "fetch-mock": "^5.6.2",
     "fixed-data-table": "0.6.0",
+    "font-awesome": "^4.7.0",
+    "font-awesome-webpack": "0.0.4",
     "fs-extra": "^0.26.3",
     "history": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
@@ -98,6 +100,7 @@
     "react-document-title": "^2.0.2",
     "react-dom": "^0.14.0",
     "react-dropdown": "1.0.4",
+    "react-fontawesome": "^1.5.0",
     "react-loader-advanced": "^1.1.2",
     "react-masonry-component": "^5.0.3",
     "react-measure": "^0.5.0",
