react-bootstrap update

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -9,17 +9,17 @@
     <add key="Smtp.To" value="darcy.buttrose@gmail.com" />
     <add key="Smtp.CC" value="darcy.buttrose@gmail.com" />
     
-    <!--<add key="Smtp.Host" value="mail.iinet.net.au" />
+    <add key="Smtp.Host" value="mail.iinet.net.au" />
     <add key="Smtp.Port" value="25" />
     <add key="Smtp.User" value="phillip.buttrose@iinet.net.au" />
     <add key="Smtp.Password" value="1Dkunxob8" />
-    <add key="Smtp.EnableSSL" value="false" />-->
+    <add key="Smtp.EnableSSL" value="false" />
     
-    <add key="Smtp.Host" value="smtp.gmail.com"/>
+    <!--<add key="Smtp.Host" value="smtp.gmail.com"/>
     <add key="Smtp.Port" value="587"/>
     <add key="Smtp.User" value="darcy.buttrose@gmail.com"/>
     <add key="Smtp.Password" value="tvdgadscthhgxuhy"/>
-    <add key="Smtp.EnableSSL" value="true" />
+    <add key="Smtp.EnableSSL" value="true" />-->
     
     <!-- Application Specific Password -->
     <add key="Portfolio.Base" value="~/assets/projects" />
