--- a/Web/package.json
+++ b/Web/package.json
@@ -88,7 +88,8 @@
     "moment": "^2.12.0",
     "promise-retry": "^1.1.0",
     "rc-slider": "^3.6.0",
-    "react": "^0.14.0",
+    "react": "^15.4.2",
+    "react-addons-create-fragment": "^15.4.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
     "react-bootstrap": "^0.30.7",
@@ -98,7 +99,7 @@
     "react-dd-menu": "^1.0.7",
     "react-dimensions": "^1.3.0",
     "react-document-title": "^2.0.2",
-    "react-dom": "^0.14.0",
+    "react-dom": "^15.4.2",
     "react-dropdown": "1.0.4",
     "react-fontawesome": "^1.5.0",
     "react-loader-advanced": "^1.1.2",
@@ -124,7 +125,8 @@
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.0.0",
     "responsive-fixed-data-table": "^2.0.0",
-    "reverse-string": "0.0.6"
+    "reverse-string": "0.0.6",
+    "validator": "^3.41.3"
   },
   "devDependencies": {
     "babel-cli": "^6.5.1",
