--- a/Web/package.json
+++ b/Web/package.json
@@ -76,6 +76,7 @@
     "fixed-data-table": "0.6.0",
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "0.0.4",
+    "form-data": "^2.1.2",
     "fs-extra": "^0.26.3",
     "history": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
