--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -374,12 +374,114 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Properties\PublishProfiles\iinet.pubxml" />
+    <Content Include="src\static\appConfig.json" />
+    <Content Include="src\static\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="src\static\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="src\static\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="src\static\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="src\static\uploads\1ea58d05-6059-44fb-82ba-03eda4d1a532.pdf" />
+    <Content Include="src\static\uploads\test.pdf" />
+    <Content Include="src\styles\burger-menu.scss" />
+    <Content Include="src\styles\core.scss" />
+    <Content Include="src\styles\select\components.scss" />
+    <Content Include="src\styles\select\control.scss" />
+    <Content Include="src\styles\select\default.scss" />
+    <Content Include="src\styles\select\menu.scss" />
+    <Content Include="src\styles\select\mixins.scss" />
+    <Content Include="src\styles\select\multi.scss" />
+    <Content Include="src\styles\select\select.scss" />
+    <Content Include="src\styles\select\spinner.scss" />
+    <Content Include="src\styles\variables.scss" />
+    <Content Include="src\styles\vendor\daterangepicker.scss" />
+    <Content Include="src\styles\vendor\react-rangeslider.less" />
+    <Content Include="src\styles\vendor\_normalize.scss" />
+    <Content Include="src\styles\_base.scss" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="src\components\PJBMenu\index.js" />
+    <Content Include="src\components\ValidatedInput\FileValidator.js" />
+    <Content Include="src\components\ValidatedInput\Form.js" />
+    <Content Include="src\components\ValidatedInput\index.js" />
+    <Content Include="src\components\ValidatedInput\InputContainer.js" />
+    <Content Include="src\components\ValidatedInput\Radio.js" />
+    <Content Include="src\components\ValidatedInput\RadioGroup.js" />
+    <Content Include="src\components\ValidatedInput\ValidatedInput.js" />
+    <Content Include="src\components\ValidatedInput\Validator.js" />
+    <Content Include="src\containers\App\Actions.js" />
+    <Content Include="src\containers\App\IApp.js" />
+    <Content Include="src\containers\App\index.js" />
+    <Content Include="src\containers\App\Keys.js" />
+    <Content Include="src\containers\App\PropTypes.js" />
+    <Content Include="src\containers\App\Reducer.js" />
+    <Content Include="src\containers\configureStore.js" />
+    <Content Include="src\containers\ContactUs\Actions.js" />
+    <Content Include="src\containers\ContactUs\IContactUs.js" />
+    <Content Include="src\containers\ContactUs\IMessage.js" />
+    <Content Include="src\containers\ContactUs\index.js" />
+    <Content Include="src\containers\ContactUs\Keys.js" />
+    <Content Include="src\containers\ContactUs\PropTypes.js" />
+    <Content Include="src\containers\ContactUs\Reducer.js" />
+    <Content Include="src\containers\Home\index.js" />
+    <Content Include="src\containers\Products\Actions.js" />
+    <Content Include="src\containers\Products\index.js" />
+    <Content Include="src\containers\Products\Keys.js" />
+    <Content Include="src\containers\Products\Reducer.js" />
+    <Content Include="src\containers\Product\Actions.js" />
+    <Content Include="src\containers\Product\index.js" />
+    <Content Include="src\containers\Product\Keys.js" />
+    <Content Include="src\containers\Product\Reducer.js" />
+    <Content Include="src\containers\Root\createDevToolsWindow.js" />
+    <Content Include="src\containers\Root\DevTools.js" />
+    <Content Include="src\containers\Root\DevToolsWindow.js" />
+    <Content Include="src\containers\Root\index.js" />
+    <Content Include="src\containers\Root\Reducer.js" />
+    <Content Include="src\containers\Root\StartUp.spec.js" />
+    <Content Include="src\img\1458573669_document_search.png" />
+    <Content Include="src\img\facebook.svg" />
+    <Content Include="src\img\gears.svg" />
+    <Content Include="src\img\loading.svg" />
+    <Content Include="src\img\Omniflow_logo_horizontal-225x38.png" />
+    <Content Include="src\img\Omnivision Horizontal Web-01.png" />
+    <Content Include="src\index.html" />
+    <Content Include="src\lib\fetch\omnifetch.js" />
+    <Content Include="src\lib\fetch\omnifetchFile.js" />
+    <Content Include="src\lib\fetch\omnipost.js" />
+    <Content Include="src\lib\fetch\omnipostdata.js" />
+    <Content Include="src\main.js" />
+    <Content Include="src\models\GuitarListPropTypes.js" />
+    <Content Include="src\models\GuitarPropTypes.js" />
+    <Content Include="src\models\IGuitar.js" />
+    <Content Include="src\models\IGuitarList.js" />
+    <Content Include="src\routes\index.js" />
+    <Content Include="src\static\audio\beep.mp3" />
+    <Content Include="src\static\bootstrap.min.css" />
+    <Content Include="src\static\compatibility.js" />
+    <Content Include="src\static\favicon-16x16.png" />
+    <Content Include="src\static\favicon-32x32.png" />
+    <Content Include="src\static\favicon.ico" />
+    <Content Include="src\static\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="src\static\humans.txt" />
+    <Content Include="src\static\images\jumbotron-back.stretched2.png" />
+    <Content Include="src\static\images\loader.gif" />
+    <Content Include="src\static\images\logo.png" />
+    <Content Include="src\static\robots.txt" />
+    <Content Include="src\static\themes\bootstrap.min.css" />
+    <Content Include="src\static\themes\bootstrap.min.dark.css" />
+    <Content Include="src\static\themes\bootstrap.min.paper.css" />
+    <Content Include="src\static\themes\bootstrap.min.readable.css" />
+    <Content Include="src\static\themes\bootstrap.min.sandstone.css" />
+    <Content Include="src\static\themes\bootstrap.min.slate.css" />
+    <Content Include="src\static\themes\bootstrap.min.spacelab.css" />
+    <Content Include="src\static\themes\bootstrap.min.superhero.css" />
+    <Content Include="src\static\themes\bootstrap.min.united.css" />
+    <Content Include="src\static\themes\bootstrap.min.yeti.css" />
+    <Content Include="src\static\themes\philipjbuttrose.css" />
+    <Content Include="src\styles\vendor\react-rangeslider.css" />
+    <Content Include="src\test-bundler.js" />
     <Content Include="ws.ashx" />
   </ItemGroup>
   <ItemGroup>
