--- a/Web/package.json
+++ b/Web/package.json
@@ -93,6 +93,7 @@
     "react-addons-create-fragment": "^15.4.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
+    "react-audio-player": "^0.3.3",
     "react-bootstrap": "^0.30.7",
     "react-burger-menu": "^1.5.7",
     "react-center": "^1.1.1",
@@ -147,14 +148,14 @@
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
     "better-npm-run": "0.0.8",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^5.1.0",
-    "chai-enzyme": "^0.4.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "chai-enzyme": "^0.4.2",
     "cheerio": "^0.20.0",
     "codecov": "^1.0.1",
     "css-loader": "^0.23.0",
     "cssnano": "^3.3.2",
-    "enzyme": "^2.0.0",
+    "enzyme": "^2.7.1",
     "eslint": "^3.3.1",
     "eslint-config-standard": "^5.3.5",
     "eslint-config-standard-react": "^3.0.0",
@@ -187,13 +188,13 @@
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.3",
     "postcss-loader": "^0.8.0",
-    "react-addons-test-utils": "^0.14.0",
+    "react-addons-test-utils": "^15.4.2",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.2",
     "redux-mock-store": "^1.2.1",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.0.0",
-    "sinon": "^1.17.3",
+    "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
